Updated landing page texts

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 
     <header>
-        <a style="padding-right: 10px; font-size: 26px;" href="" target="_blank" class="gradient-yellow" width="30"
-            height="30">Portfolio</a>
+        <a style="padding-right: 10px; font-size: 26px;" href="" target="_blank"
+            class="gradient-yellow container-social" width="30" height="30">Portfolio</a>
         <a style="padding-right: 10px;" class="container-social" href="https://twitter.com/0by0_" target="_blank"><img
                 src="assets/images/twitterlogo.svg" width="30" height="30" alt=""></a>
         <a style="padding-right: 150px;" href="https://t.me/zerobyzerodevelopment" target="_blank"><img
@@ -21,10 +21,19 @@
     </header>
 
     <div>
-        <img class="centered" src="assets/images/0by0_centre_Image.svg" width="450" height="450" alt="">
+        <img class="centered" src="assets/images/0by0_centre_Image.svg" width="350" height="350" alt="">
+    </div>
+    <div class="services">
+        <p class="gradient-light-blue" style="font-size: 18px;">We develop Web3 Blockchain projects.<br>
+            For partnership, contact us via telegram or twitter for faster response.
+        </p>
+
     </div>
     <div class="copyright">
-        <p class="gradient-light-blue">© 2022 0by0.io - All rights reserved</p>
+        <p class="gradient-light-blue" style="font-size: 18px;">© 2022 0by0.io - All rights reserved</p>
+    </div>
+    <div class="contacts">
+        <p class="gradient-light-blue" style="font-size: 18px;">growth@0by0.io</p>
     </div>
 </body>
 
