Updated Social icons

--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 </head>
 
 <body>
-
     <header>
-        <a style="padding-right: 10px; font-size: 26px;" href="" target="_blank"
-            class="gradient-yellow container-social" width="30" height="30">Portfolio</a>
-        <a style="padding-right: 10px;" class="container-social" href="https://twitter.com/0by0_" target="_blank"><img
+        <a style="padding-right: 10px; font-size: 26px;" href="" target="_blank" class="gradient-yellow" width="30"
+            height="30">Portfolio</a>
+        <a style="padding-right: 10px;" href="https://twitter.com/0by0_" target="_blank"><img
                 src="assets/images/twitterlogo.svg" width="30" height="30" alt=""></a>
-        <a style="padding-right: 150px;" href="https://t.me/zerobyzerodevelopment" target="_blank"><img
+        <a style="padding-right: 50px;" href="https://t.me/zerobyzerodevelopment" target="_blank"><img
                 src="assets/images/telegramlogo.svg" width="30" height="30" alt=""></a>
     </header>
 
