Added background image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="services">
         <p class="gradient-light-blue" style="font-size: 19px;">We develop Web3 Blockchain projects.<br>
-            For partnership, contact us via telegram or twitter for faster response.
+            For partnership contact us via telegram or twitter for faster response.
         </p>
 
     </div>
